# DynaposeEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: CMakeLists.txt  ImplTinyGLTF.cpp  PCH.h
src/DynaposeAPI/SceneDefinition/: DynaposeScene.h  DynaposeSceneManager.h
src/DynaposeEngine/: DynaPose.h
src/DynaposeEngine/Core/: InterfaceData.h  Transform.h  World.h
src/DynaposeEngine/Core/ECS/: ECSHelper.h
src/DynaposeEngine/Core/ECS/Components/: DriverNode.h  InGameEntity.h  Name.h  Transform.h  TransformUtils.h
src/DynaposeEngine/Core/ECS/Systems/: ApplyDriverNodeTransformations.h  ISystem.h  ReadInGameData.h  SystemStage.h  UpdateTransformMatrices.h  WriteGameData.h
src/DynaposeEngine/Rigs/: Rig.h
src/DynaposeEngine/SceneDefinition/: DynaPoseScene.h  DynaPoseSceneManager.h
src/DynaposeEngine/Serialization/: DynaPoseSerialization.h
src/DynaposeEngine/Serialization/Serializers/: TransformSerializer.h
src/DynaposeEngine/Util/: EditableContainer.h
src/ImplDynaposeAPI/SceneDefinition/: DynaposeScene.cpp  DynaposeSceneManager.cpp
src/ImplDynaposeEngine/Core/: InterfaceData.cpp  Transform.cpp  World.cpp
src/ImplDynaposeEngine/Core/ECS/Components/: Transform.cpp  TransformUtils.cpp
src/ImplDynaposeEngine/Core/ECS/Systems/: ApplyDriverNodeTransformations.cpp  ISystem.cpp  ReadInGameData.cpp  UpdateTransformMatrices.cpp  WriteGameData.cpp
src/ImplDynaposeEngine/Rigs/: Rig.cpp
src/ImplDynaposeEngine/SceneDefinition/: DynaPoseScene.cpp  DynaPoseSceneManager.cpp
src/ImplDynaposeEngine/Serialization/: DynaPoseSerialization.cpp
src/ImplDynaposeEngine/Serialization/Serializers/: TransformSerializer.cpp
test/: CMakeLists.txt  RunTests.cpp  TestDynaPoseSerialization.cpp  TestTransformUpdate.cpp  TestUtils.cpp  TestUtils.h
test/TestFiles/: MinimalTestRig.glb  RigifyMetaRigBasic.glb  RigifyMetaRigBasic.gltf
